editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -121,12 +121,12 @@
     }
 
     $(document).ready(function() {
-        Flex();
+        //Flex();
         $('.slideshow').flexslider();
     });
 
     $(window).resize(function() {
-        Flex();
+        //Flex();
         $('.slideshow').flexslider();
     });
 
