editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -122,12 +122,16 @@
 
     $(document).ready(function() {
         //Flex();
-        $('.slideshow').flexslider();
+        $('.flexslider').flexslider({
+              animation: "slide"
+        });
     });
 
     $(window).resize(function() {
         //Flex();
-        $('.slideshow').flexslider();
+         $('.flexslider').flexslider({
+              animation: "slide"
+        });
     });
 
     $("#open").click(function () {
