editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -122,16 +122,12 @@
 
     $(document).ready(function() {
         //Flex();
-        $('.flexslider').flexslider({
-              animation: "slide"
-        });
+        $('.slideshow').flexslider();
     });
 
     $(window).resize(function() {
         //Flex();
-         $('.flexslider').flexslider({
-              animation: "slide"
-        });
+        $('.slideshow').flexslider();
     });
 
     $("#open").click(function () {
