--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -124,7 +124,7 @@
         //Flex();
         $('.slideshow').flexslider({
             animation: "slide",
-            controlsContainer: ".thumbnails"
+            manualControls: ".thumbnails",
         });
     });
 
