editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -139,7 +139,8 @@
             animationLoop: true,
             pauseOnAction: true,
             pauseOnHover: true,
-            manualControls: ".slide-controls"
+            controlsContainer:".thumbnails"
+            manualControls: ".slide-controls img"
         });
     });
 
