editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -139,8 +139,8 @@
             animationLoop: true,
             pauseOnAction: true,
             pauseOnHover: true,
-            controlsContainer:".thumbnails"
-            manualControls: ".slide-controls img"
+            //controlsContainer:".thumbnails"
+            manualControls: ".thumbnails ul li"
         });
     });
 
