editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -140,7 +140,7 @@
             pauseOnAction: true,
             pauseOnHover: true,
             controlsContainer:".thumbnails"
-            manualControls: "ul.slide-controls li a"
+            manualControls: ".slide-controls li a"
         });
     });
 
