editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -139,7 +139,7 @@
             animationLoop: true,
             pauseOnAction: true,
             pauseOnHover: true,
-            controlsContainer:".thumbnails"
+            controlsContainer:".thumbnails",
             manualControls: ".slide-controls li a"
         });
     });
