--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -12,6 +12,14 @@
                 </li>
             {% endfor %}
             </ul>
+            <ul class="slide-controls">
+               {% for image in project.projectimage_set.all %}
+                    <li>
+                        <a href="#"><img src="{{ image.thumbnail.url }}"
+                             alt="{{ image.caption }}"/></a>
+                   </li>
+               {% endfor %}
+            </ul>
         </section>
         {% endif %}
         <section class="details">
@@ -64,14 +72,7 @@
             {% endif %}
         </section>
         <section class="thumbnails">
-            <ul class="slide-controls">
-               {% for image in project.projectimage_set.all %}
-                    <li>
-                        <a href="#"><img src="{{ image.thumbnail.url }}"
-                             alt="{{ image.caption }}"/></a>
-                   </li>
-               {% endfor %}
-            </ul>
+
         </section>
         <section class="more">
             {% load easy_maps_tags %}
@@ -139,7 +140,7 @@
             animationLoop: true,
             pauseOnAction: true,
             pauseOnHover: true,
-            controlsContainer:".thumbnails",
+            //controlsContainer:".thumbnails",
             manualControls: ".slide-controls li a"
         });
     });
