--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -245,7 +245,7 @@ div.main section.featured article.project {
         background: #ccc;
     }
 
-    .slideshow img {
+    .slideshow .slides img {
         width:100%;
         display:block;
     }
@@ -268,6 +268,26 @@ div.main section.featured article.project {
         width:97.34%;
     }
 
+    .slideshow .slide-controls {
+        margin:0 0 0 0;
+        padding:0 0 0 0;
+    }
+
+    .slideshow .slide-controls li {
+        margin:0 0 0 0;
+        padding:0 0 0 0;
+        list-style: none;
+        float:left;
+        background:#ccc;
+        width: 9.838%;
+        margin-left: 1.331%;
+        margin-right: 1.331%;
+    }
+
+    .slideshow .slide-controls img {
+        width:100%
+    }
+
 /* details */
 
     .details {
@@ -279,34 +299,7 @@ div.main section.featured article.project {
 
 /* thumbnails */
 
-    .thumbnails {
-        float:left;
-        width:62.63%;
-        overflow:auto;
-        margin:5% 0;
-        padding: 0 0 0 0;
-        clear:both;
-    }
 
-    .thumbnails ul {
-        margin:0 0 0 0;
-        padding:0 0 0 0;
-    }
-
-    .thumbnails li {
-        margin:0 0 0 0;
-        padding:0 0 0 0;
-        list-style: none;
-        float:left;
-        background:#ccc;
-        width: 9.838%;
-        margin-left: 1.331%;
-        margin-right: 1.331%;
-    }
-
-    .thumbnails img {
-        width:100%
-    }
 
     .more {
         float:left;
