--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -237,7 +237,7 @@ div.main section.featured article.project {
 }
 
 /* slideshow */
-    .slideshow {
+    .slideshow-container {
         float:left;
         width:60.14%;
         margin:0 0.83%;
@@ -268,12 +268,12 @@ div.main section.featured article.project {
         width:97.34%;
     }
 
-    .slideshow .slide-controls {
+    .slideshow-container .controls {
         margin:0 0 0 0;
         padding:0 0 0 0;
     }
 
-    .slideshow .slide-controls li {
+    .slideshow-container .controls li {
         margin:0 0 0 0;
         padding:0 0 0 0;
         list-style: none;
@@ -284,7 +284,7 @@ div.main section.featured article.project {
         margin-right: 1.331%;
     }
 
-    .slideshow .slide-controls img {
+    .slideshow-container .controls img {
         width:100%
     }
 
@@ -296,8 +296,6 @@ div.main section.featured article.project {
         margin:0 0.83%;
         overflow:hidden;
     }
-
-/* thumbnails */
 
 
 
