editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -141,7 +141,7 @@
             animationLoop: true,
             pauseOnAction: true,
             pauseOnHover: true,
-            controlsContainer:".controls"
+            controlsContainer:".controls",
             manualControls: ".controls ul li"
         });
     });
