editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -142,7 +142,7 @@
             pauseOnAction: true,
             pauseOnHover: true,
             controlsContainer:".controls",
-            manualControls: ".controls ul li"
+            manualControls: "ul li a"
         });
     });
 
