--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -284,6 +284,13 @@ div.main section.featured article.project {
 
     .slideshow-container .controls img {
         width:100%
+        opacity:0.4;
+        filter:alpha(opacity=40); /* For IE8 and earlier */
+    }
+
+    .slideshow-container .controls a.active img {
+        opacity:1.0;
+        filter:alpha(opacity=100); /* For IE8 and earlier */
     }
 
     .slideshow-container .flex-direction-nav {
