editing header css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -283,7 +283,7 @@ div.main section.featured article.project {
     }
 
     .slideshow-container .controls img {
-        width:100%
+        width:100%;
         opacity:0.4;
         filter:alpha(opacity=40); /* For IE8 and earlier */
     }
