editing header css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -262,9 +262,9 @@ div.main section.featured article.project {
         background:rgba(0,0,0,0.7);
         color:#fff;
         line-height:3em;
-        /*padding:0 1.33%;
+        padding:0 1.33%;
         margin: 0;
-        width:97.34%;*/
+        width:97.34%;
     }
 
     .slideshow-container .controls {
