editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -121,7 +121,6 @@
     }
 
     $(document).ready(function() {
-        //Flex();
         $('.slideshow').flexslider({
             animation: "slide",
             slideshow: true,
@@ -142,10 +141,11 @@
             controlsContainer:".controls",
             manualControls: "ul li a"
         });
+        Flex();
     });
 
     $(window).resize(function() {
-        //Flex();
+        Flex();
     });
 
     $("#open").click(function () {
