editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -110,12 +110,12 @@
             var total_width = c.width();
             var margin = total_width * .013331;
 
-            a.css('height', height);
+            //a.css('height', height);
             b.css('margin-top', margin);
             b.css('margin-bottom', margin);
             c.css('margin-bottom', margin);
-            d.css('height', height);
-            d.css('margin-bottom', margin);
+            //d.css('height', height);
+            //d.css('margin-bottom', margin);
     }
 
     $(document).ready(function() {
