--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -58,6 +58,7 @@ a:visited {
 
 body {
         min-width:1024px;
+        max-width:1600px;
         padding:0;
         position:relative;
         font: normal 87.5% "Segoe UI", "Lucida Sans", Arial, Helvetica, sans-serif;
