--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -308,6 +308,7 @@ div.main section.featured article.project {
 
     .slideshow-container .flex-direction-nav .next {
         right:1.25%;
+        text-align: right;
     }
 
     .slideshow-container .flex-direction-nav .prev {
