--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -302,7 +302,8 @@ div.main section.featured article.project {
         position:absolute;
         top:0;
         width:33%;
-        height:100%;
+        height:0;
+        padding-top:100%;
         z-index:1000;
     }
 
