--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -300,10 +300,9 @@ div.main section.featured article.project {
 
     .slideshow-container .flex-direction-nav a {
         position:absolute;
-        top:0;
+        top:50%;
         width:33%;
-        height:0;
-        padding-top:100%;
+        height:50%;
         z-index:1000;
     }
 
