--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -387,9 +387,12 @@ div.main section.featured article.project {
 
     .categories li {
         float:left;
-        width:6.25%;
+        width:10%;
         margin: 0 1.25%;
         height:25px;
+        color:#fff;
+        font-weight: bold;
+        line-height:25px;
     }
 
     .categories .project-type {
