--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -387,12 +387,13 @@ div.main section.featured article.project {
 
     .categories li {
         float:left;
-        width:10%;
-        margin: 0 1.25%;
-        height:40px;
+        width:7.5%;
+        margin: 0 2.5% 0 0;
+        height:30px;
         color:#fff;
         font-weight: bold;
-        line-height:40px;
+        line-height:30px;
+        text-align: center;
     }
 
     .categories .project-type {
