editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -125,7 +125,7 @@
 
     function FlexBox() {
             $('.box').each(function(i, obj){
-                width = this.width();
+                width = $(this).width();
                 this.css('height',width);
             });
     }
