editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -126,7 +126,7 @@
     function FlexBox() {
             $('.box').each(function(i, obj){
                 width = $(this).width();
-                this.css('height',width);
+                $(this).css('height',width);
             });
     }
 
