editing header css

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -132,7 +132,7 @@
 
 
     $(document).ready(function() {
-        $('.slideshow').flexslider({
+        $('.carousel').flexslider({
             animation: "slide",
             slideshow: true,
             slideshowSpeed: 7000,
