--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -382,7 +382,7 @@ div.main section.featured article.project {
         margin:0 2.5%;
     }
 
-    .details ul, p {
+    .details ul, .details p {
         margin: 10px 2.5% 10px 2.5%;
     }
     .size, .date, .designer {
