editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -372,7 +372,7 @@ div.main section.featured article.project {
     }
 
     .details h1 {
-        font-weight: bold;
+        font-size:1.8em;
     }
 
     .details ul,
