editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -373,6 +373,7 @@ div.main section.featured article.project {
 
     .details h1 {
         font-size:1.8em;
+        font-weight:normal;
     }
 
     .details ul,
