--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -376,9 +376,15 @@ div.main section.featured article.project {
         font-weight:normal;
     }
 
+    .details h2 {
+        font-size:1.2em;
+        font-weight:bold;
+    }
+
     .details ul,
     .details p,
-    .details header {
+    .details header,
+    .details h2 {
         clear:both;
         margin:0 2.5%;
     }
